--- a/src/components/highlightList/highlight/style.css
+++ b/src/components/highlightList/highlight/style.css
@@ -23,5 +23,6 @@
     height: 166px;
     width: 320px;
     border-radius: 0 8px 8px 0;
+    background-image: url("https://picsum.photos/320");
     background-color: #FFC700;
 }
